--- a/second.html
+++ b/second.html
@@ -22,7 +22,7 @@
 			<img src="img/instagram.jpg" height="20" alt="instagram"> </a>
 
             <a class="nav-link" href="index.html">Etusivu</a>
-            <a class="nav-link" href="second.html">Blogi</a>
+            <a class="nav-link" href="#">Blogi</a>
             <a class="nav-link" href="third.html">Yhteistyöt</a>
 
 		  </nav>
@@ -34,7 +34,7 @@
 	<h3 class="subtitle"> Nakkiarvostelut </h3>
 	
 	
-	<img class="img-fluid" src="img/pormestari.jpg" height="200px" alt="leksan kuva" >
+	<img class="img-fluid" src="img/pormestari.jpg" alt="leksan kuva" >
 
 		
     <div class="row" >
@@ -42,7 +42,7 @@
         <div class="card h-100">
           <div id="taustakuva" class="card-body">
             <h2 class="card-title">Wotkin</h2>
-            <p class="card-text"></p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
           </div>
           <div class="card-footer">
             <a href="second.html" class="btn btn-primary btn-sm">Lue lisää</a>
@@ -95,13 +95,12 @@
 	<footer class="bg-dark">
 		<div class="container">
 			<p class="text-center text-white">Copyright &copy; Leksan kotisivut 2020</p>
-			<a href="second.html" class="text-right">Blogi</a>
+			<a href="index.html" role="button" class="btn btn-outline-light">Etusivu</a>
+			<a href="second.html" role="button" class="btn btn-outline-light">Blogi</a>
+			<a href="third.html" role="button" class="btn btn-outline-light">Yhteistyöt</a>
 		</div>
 		
 	</footer>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+   </body>
 </html>
