--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <body>
 	<header>
 		<div class="navigointi">
-		  <nav class="w3 bar">
             <a href="https://www.facebook.com/">
 			<img src="img/f_logo.png" height="20" alt="facebook"> </a>
             <a href="https://www.instagram.com/leegopoika/">
@@ -26,54 +25,56 @@
             <a class="nav-link" href="second.html">Blogi</a>
             <a class="nav-link" href="third.html">Yhteistyöt</a>
 
-		  </nav>
 		</div>
 	</header>
 	  
-	<div class="container">
+	<div class="container" class="cont1">
     <h1 class="title">Leksan kotisivut</h1>
 		
 		<div class= "row">
 			 <div class="col-lg-12">
-			<p class= "jumbotron"> Tekstiä mitä sivusto sisältää. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+			<p class= "pagecontent"> Tekstiä mitä sivusto sisältää. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 			 </div>
 		</div>	
+		
 		<div class= "row">
-			 <div class="col-lg-12">
-			 <a href="second.html">
-			 <img class="link-pic" src="img/sohva.png" alt="blogikuva" width="70" height="70">   
-			<p class="linkkiteksti">  Tekstiä mitä linkki sisältää. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  </p>
-			 </div>
+		   <div class="col-lg-12">
+
+			<h3>Blogi</h3> 
+			<a href="second.html">
+			 <p class="linkkiteksti">  Tekstiä mitä linkki sisältää. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  </p>
+			</a>
+		   </div>
 		</div>		
 		<div class= "row">
-			 <div class="col-lg-12">
-			 <a href="third.html">
-			<img class="link-pic" src="img/sohva.png" alt="blogikuva" width="70" height="70">   
-			<p>  Tekstiä mitä linkki sisältää. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-			 </div>
+		   <div class="col-lg-12">
+			<h3>Yhteistyöt</h3>
+			<a href="third.html">   
+			 <p>  Tekstiä mitä linkki sisältää. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+			</a>
+		   </div>
 		</div>	
 		<div class= "row">
-			 <div class="col-lg-12">
-			 <a href="fourth.html">
-			<img class="link-pic" src="img/sohva.png" alt="blogikuva" width="70" height="70">  
-			<p>  Tekstiä mitä linkki sisältää. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-			 </div>
+		   <div class="col-lg-12">
+		    <h3>Yhteydenotot</h3>
+			 <a href="#.html"> 
+			<p>  Tekstiä mitä linkki sisältää. TULOSSA. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+			 </a>
+		   </div>
 		</div>	
 	</div>	
 	
-	&nbsp;&nbsp;
-	
+
 	<footer class="bg-dark">
 		<div class="container">
 			<p class="text-center text-white">Copyright &copy; Leksan kotisivut 2020</p>
+			<a href="index.html" role="button" class="btn btn-outline-light">Etusivu</a>
 			<a href="second.html" role="button" class="btn btn-outline-light">Blogi</a>
+			<a href="third.html" role="button" class="btn btn-outline-light">Yhteistyöt</a>
 				<span class="oi oi-trash" title="trash" aria-hidden="true"></span
 		</div>
 		
 	</footer>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+ 
   </body>
 </html>
