--- a/third.html
+++ b/third.html
@@ -22,7 +22,7 @@
 
             <a class="nav-link" href="index.html">Etusivu</a>
             <a class="nav-link" href="second.html">Blogi</a>
-            <a class="nav-link" href="third.html">Yhteistyöt</a>
+            <a class="nav-link" href="#">Yhteistyöt</a>
 
 		  </nav>
 		</div>
@@ -31,12 +31,12 @@
 	<div class="container">
     <h1 class="title">Leksan yhteistyöt</h1>
 	<h3 class="subtitle"> </h3>
-	<img class="blogimage" src="img/kalajoki.jpg" height="200px" alt="blogikuva" ></img>
+	<img class="img-fluid" src="img/kalajoki.jpg" alt="blogimage" ></img>
 
 		
 		<div class= "row" id="yt3">
 		  <div class="col-lg-12">
-			<h2 class="yhteistyo">Koira shampoo </h2>
+			<h2 class="yhteistyo">Koirien shampoo </h2>
 			<p class= "kuvaus"> Tekstiä mitä sivusto sisältää. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 		  </div>
 		  <div class="col-lg-12">
@@ -56,13 +56,12 @@
 	<footer class="bg-dark">
 		<div class="container">
 			<p class="text-center text-white">Copyright &copy; Leksan kotisivut 2020</p>
-			<a href="second.html" class="text-right">Blogi</a>
+			<a href="index.html" role="button" class="btn btn-outline-light">Etusivu</a>
+			<a href="second.html" role="button" class="btn btn-outline-light">Blogi</a>
+			<a href="third.html" role="button" class="btn btn-outline-light">Yhteistyöt</a>
 		</div>
 		
 	</footer>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
