--- a/second.html
+++ b/second.html
@@ -45,7 +45,7 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
           </div>
           <div class="card-footer">
-            <a href="second.html" class="btn btn-primary btn-sm">Lue lisää</a>
+            <a href="second.html" class="mybutton">Lue lisää</a>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary btn-sm">Lue lisää</a>
+            <a href="#" class="mybutton">Lue lisää</a>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary btn-sm">Lue lisää</a>
+            <a href="#" class="mybutton">Lue lisää</a>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
           </div>
           <div class="card-footer">
-           <a href="#" class="btn btn-primary btn-sm">Lue lisää</a>
+           <a href="#" class="mybutton">Lue lisää</a>
 		  </div>
 		  </div>
 		 </div>
@@ -98,6 +98,11 @@
 			<a href="index.html" role="button" class="btn btn-outline-light">Etusivu</a>
 			<a href="second.html" role="button" class="btn btn-outline-light">Blogi</a>
 			<a href="third.html" role="button" class="btn btn-outline-light">Yhteistyöt</a>
+			
+			<a href="https://www.facebook.com/">
+			 <img src="img/f_logo.png" height="20" alt="facebook"> </a>
+            <a href="https://www.instagram.com/leegopoika/">
+			 <img src="img/instagram.jpg" height="20" alt="instagram"> </a>
 		</div>
 		
 	</footer>
