--- a/third.html
+++ b/third.html
@@ -59,6 +59,11 @@
 			<a href="index.html" role="button" class="btn btn-outline-light">Etusivu</a>
 			<a href="second.html" role="button" class="btn btn-outline-light">Blogi</a>
 			<a href="third.html" role="button" class="btn btn-outline-light">Yhteistyöt</a>
+			
+			<a href="https://www.facebook.com/">
+			 <img src="img/f_logo.png" height="20" alt="facebook"> </a>
+            <a href="https://www.instagram.com/leegopoika/">
+			 <img src="img/instagram.jpg" height="20" alt="instagram"> </a>
 		</div>
 		
 	</footer>
