--- a/index.html
+++ b/index.html
@@ -17,21 +17,24 @@
 
 	<header>
 		<div class="navigointi">
-            <a href="https://www.facebook.com/">
-			<img src="img/f_logo.png" height="20" alt="facebook"> </a>
-            <a href="https://www.instagram.com/leegopoika/">
-			<img src="img/instagram.jpg" height="20" alt="instagram"> </a>
+		  <ul>
+            <li> <a class="nav-link2" href="https://www.facebook.com/">
+			<img src="img/f_logo.png" height="40" alt="facebook"> </a> </li>
+            
+			<li><a class="nav-link2" href="https://www.instagram.com/leegopoika/">
+			<img src="img/instagram.jpg" height="40" alt="instagram"> </a> </li>
 
-            <a class="nav-link" href="#">Etusivu</a>
-            <a class="nav-link" href="second.html">Blogi</a>
-            <a class="nav-link" href="third.html">Yhteistyöt</a>
+            <li> <a class="nav-link2" href="#">Etusivu</a> </li>
+            <li> <a class="nav-link2" href="second.html">Blogi</a> </li>
+            <li> <a class="nav-link2" href="third.html">Yhteistyöt</a> </li>
+		  </ul>	
 
 		</div>
 	</header>
 	  
 	<div class="container">
 	  <div class="cont1">
-
+	 
     <h1 class="title1">Leksan kotisivut</h1>
 	  	
 	  </div>
