--- a/second.html
+++ b/second.html
@@ -15,15 +15,15 @@
 	<header>
 		<div class="navigointi">
 		  <nav class="w3 bar">
-            <a href="https://www.facebook.com/">
-			<img src="img/f_logo.png" height="20" alt="facebook"> </a>
+            <a class="nav-link2" href="https://www.facebook.com/">
+			<img src="img/f_logo.png" height="40" alt="facebook"> </a>
 			
-            <a href="https://www.instagram.com/leegopoika/">
-			<img src="img/instagram.jpg" height="20" alt="instagram"> </a>
+            <a  class="nav-link2" href="https://www.instagram.com/leegopoika/">
+			<img src="img/instagram.jpg" height="40" alt="instagram"> </a>
 
-            <a class="nav-link" href="index.html">Etusivu</a>
-            <a class="nav-link" href="#">Blogi</a>
-            <a class="nav-link" href="third.html">Yhteistyöt</a>
+            <a class="nav-link2" href="index.html">Etusivu</a>
+            <a class="nav-link2" href="#">Blogi</a>
+            <a class="nav-link2" href="third.html">Yhteistyöt</a>
 
 		  </nav>
 		</div>
