--- a/third.html
+++ b/third.html
@@ -30,10 +30,8 @@
 	  
 	<div class="container">
     <h1 class="title">Leksan yhteistyöt</h1>
-	<h3 class="subtitle"> </h3>
-	<img class="img-fluid" src="img/kalajoki.jpg" alt="blogimage" ></img>
+	<img class="img-fluid" src="img/kalajoki.jpg" alt="blogimage">
 
-		
 		<div class= "row" id="yt3">
 		  <div class="col-lg-12">
 			<h2 class="yhteistyo">Koirien shampoo </h2>
@@ -49,10 +47,7 @@
 		  </div>
 		</div>	
 	 </div>
-	</div>	
-	
-
-	
+		
 	<footer class="bg-dark">
 		<div class="container">
 			<p class="text-center text-white">Copyright &copy; Leksan kotisivut 2020</p>
