--- a/third.html
+++ b/third.html
@@ -46,8 +46,25 @@
 			<p class= "kuvaus"> Tekstiä mitä sivusto sisältää. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 		  </div>
 		</div>	
-	 </div>
-		
+		  <div class="col-lg-12">
+			<h2 class="lomake"> Kiinnostunut yhteistyöstä? Ota yhteyttä!</h2>
+			<form class= "lomake2" >
+			 <div>
+			  <label for="name">Nimi</label>
+			  <input id="name" type="text" name="firstname" placeholder="Etunimi Sukunimi">
+			 </div>
+			 <div> 
+			  <label for="email">Sähköposti</label>
+			  <input id="email" type="email" name="email" placeholder="malli@malliemail.com">
+			 </div>
+			 <div> 
+			  <label for="viesti">Viesti</label>
+			  <input id="viesti" type="text" name="Lisää viesti" placeholder="Viesti tähän..">
+			 </div> 
+			  <input type="submit" value=Submit>
+			</form>
+		  </div>
+		</div>
 	<footer class="bg-dark">
 		<div class="container">
 			<p class="text-center text-white">Copyright &copy; Leksan kotisivut 2020</p>
